--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -13,11 +13,18 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.23.0",
+    "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
+    "compose-middleware": "^2.2.0",
+    "debug": "^2.6.2",
     "express": "^4.15.2",
     "ht-core": "*",
-    "morgan": "^1.8.1"
+    "moment": "^2.17.1",
+    "morgan": "^1.8.1",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
