--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -13,6 +13,12 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.23.0",
-    "mongoose": "^4.8.6"
+    "bcrypt": "^1.0.2",
+    "ht-util": "*",
+    "joi": "^10.2.2",
+    "moment": "^2.17.1",
+    "mongoose": "^4.8.6",
+    "mongoose-hidden": "^1.1.0",
+    "rand-token": "^0.3.0"
   }
 }
