--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -33,6 +33,7 @@
     "react-native-device-info": "^0.10.0",
     "react-native-drawer": "^2.3.0",
     "react-native-linear-gradient": "^2.0.0",
+    "react-native-global-props": "^1.1.1",
     "react-native-router-flux": "^3.37.0",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.2",
