--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -35,6 +35,7 @@
     "react-native-config": "^0.2.1",
     "react-native-device-info": "^0.10.0",
     "react-native-drawer": "^2.3.0",
+    "react-native-linear-gradient": "^2.0.0",
     "react-native-router-flux": "^3.37.0",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.2",
@@ -95,5 +96,12 @@
     "ghooks": {
       "pre-commit": "if [ -d 'ignite-base' ]; then cd ignite-base; fi; npm run lint"
     }
+  },
+  "rnpm": {
+    "assets": [
+      "./App/Fonts",
+      "./App/Images",
+      "./App/Images/Icons"
+    ]
   }
 }
