--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "babel src -d dist",
     "clean": "rimraf dist",
+    "start": "node dist/index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -18,7 +19,7 @@
     "body-parser": "^1.17.1",
     "compose-middleware": "^2.2.0",
     "express": "^4.15.2",
-    "@rwoody/ht-core": "~0.0.1-beta",
+    "@rwoody/ht-core": "~0.0.3",
     "moment": "^2.17.1",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
@@ -26,6 +27,7 @@
     "passport-http-bearer": "^1.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.23.0",
