--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rwoody/ht-core",
-  "version": "0.0.1-beta",
+  "version": "0.0.6",
   "description": "HERO Traveler core server functions",
   "main": "index.js",
   "scripts": {
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-register": "^6.23.0",
     "bcrypt": "^1.0.2",
-    "@rwoody/ht-util": "~0.0.1-beta",
+    "@rwoody/ht-util": "*",
     "joi": "^10.2.2",
     "moment": "^2.17.1",
     "mongoose": "^4.8.6",
@@ -21,9 +22,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
-    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
-    "babel-register": "^6.23.0",
     "rimraf": "^2.6.1"
   }
 }
