--- a/packages/ht-util/package.json
+++ b/packages/ht-util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rwoody/ht-util",
-  "version": "0.0.1-beta",
+  "version": "0.0.2",
   "description": "Common server/client javascript functions",
   "main": "index.js",
   "keywords": [],
