--- a/packages/HeroTravelerMobile/android/app/build.gradle
+++ b/packages/HeroTravelerMobile/android/app/build.gradle
@@ -127,6 +127,9 @@ android {
 
 dependencies {
     compile project(':react-native-linear-gradient')
+    compile project(':react-native-image-picker')
+    compile project(':react-native-svg')
+    compile project(':react-native-camera')
     compile project(':react-native-vector-icons')
     compile project(':react-native-device-info')
     compile project(':react-native-config')
