--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -29,15 +29,20 @@
     "react": "~15.4.1",
     "react-native": "0.42.0",
     "react-native-animatable": "^1.1.0",
+    "react-native-camera": "0.6",
     "react-native-config": "^0.2.1",
     "react-native-device-info": "^0.10.0",
     "react-native-drawer": "^2.3.0",
     "react-native-linear-gradient": "^2.0.0",
     "react-native-global-props": "^1.1.1",
+    "react-native-image-picker": "^0.26.2",
     "react-native-router-flux": "^3.37.0",
+    "react-native-svg": "^5.1.5",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
+    "redux-form": "^6.5.0",
+    "redux-logger": "^2.8.2",
     "redux-persist": "^4.1.0",
     "redux-saga": "^0.14.3",
     "reduxsauce": "0.4.1",
