--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -14,12 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@rwoody/ht-core": "~0.0.3",
     "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "compose-middleware": "^2.2.0",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
-    "@rwoody/ht-core": "~0.0.3",
     "moment": "^2.17.1",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
