--- a/packages/ht-seed-data/package.json
+++ b/packages/ht-seed-data/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@rwoody/ht-util",
-  "version": "0.0.2",
+  "name": "@rwoody/ht-seed-data",
+  "version": "0.0.1",
+  "private": true,
   "description": "Common server/client javascript functions",
   "main": "index.js",
   "keywords": [],
@@ -9,7 +10,7 @@
   "scripts": {
     "seed": "node index.js",
     "dev": "nodemon -w src index.js",
-    "postinstall": "mkdir -p dist/categories dist/categories"
+    "postinstall": "mkdir -p dist/category_images dist/story_images"
   },
   "devDependencies": {
     "@rwoody/ht-core": "*",
