--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "0.0.1-beta",
   "devDependencies": {
     "lerna": "2.0.0-beta.38"
+  },
+  "scripts": {
+    "bootstrap": "lerna bootstrap"
   }
 }
