--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -25,6 +25,7 @@
     "format-json": "^1.0.3",
     "lodash": "^4.17.2",
     "normalizr": "^3.2.2",
+    "numeral": "^2.0.6",
     "querystringify": "0.0.4",
     "ramda": "^0.23.0",
     "react": "~15.4.1",
