--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -23,19 +23,7 @@
   "dependencies": {
     "apisauce": "^0.10.0",
     "format-json": "^1.0.3",
-    "lodash": "^4.17.2",
-    "querystringify": "0.0.4",
-    "ramda": "^0.23.0",
-    "react": "~15.4.1",
-    "react-native": "0.42.0",
-    "react-native-animatable": "^1.1.0",
-    "react-native-camera": "0.6",
-    "react-native-config": "^0.2.1",
-    "react-native-device-info": "^0.10.0",
-    "react-native-drawer": "^2.3.0",
-    "react-native-linear-gradient": "^2.0.0",
-    "react-native-global-props": "^1.1.1",
-    "react-native-image-picker": "^0.26.2",
+    "lodash": "^4-image-picker": "^0.26.2",
     "react-native-router-flux": "^3.37.0",
     "react-native-svg": "^5.1.5",
     "react-native-vector-icons": "^4.0.0",
