--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -19,6 +19,8 @@
     "moment": "^2.17.1",
     "mongoose": "^4.8.6",
     "mongoose-hidden": "^1.1.0",
+    "nodemailer-express-handlebars": "^2.0.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "rand-token": "^0.3.0"
   },
   "devDependencies": {
