--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -14,11 +14,15 @@
     "@rwoody/ht-util": "*",
     "babel-register": "^6.23.0",
     "bcrypt": "^1.0.2",
+    "consolidate": "^0.14.5",
+    "handlebars": "^4.0.6",
+    "handlebars-loader": "^1.4.0",
     "joi": "^10.2.2",
     "meanie-mongoose-to-json": "^1.2.1",
     "moment": "^2.17.1",
     "mongoose": "^4.8.6",
     "mongoose-hidden": "^1.1.0",
+    "nodemailer": "^3.1.8",
     "nodemailer-express-handlebars": "^2.0.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "rand-token": "^0.3.0"
