--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -15,17 +15,23 @@
   "license": "ISC",
   "dependencies": {
     "@rwoody/ht-core": "~0.0.3",
+    "aws-sdk": "^2.40.0",
     "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "compose-middleware": "^2.2.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "knox": "^0.9.2",
     "moment": "^2.17.1",
     "morgan": "^1.8.1",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.5.0",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
-    "passport-http-bearer": "^1.0.1"
+    "passport-http-bearer": "^1.0.1",
+    "sharp": "^0.17.3",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
