--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -41,6 +41,7 @@
     "react-native-image-picker": "^0.26.2",
     "react-native-keyboard-spacer": "^0.3.1",
     "react-native-linear-gradient": "^2.0.0",
+    "react-native-maps": "^0.14.0",
     "react-native-router-flux": "^3.37.0",
     "react-native-svg": "^5.1.5",
     "react-native-vector-icons": "^4.0.0",
@@ -57,6 +58,7 @@
   "devDependencies": {
     "ava": "^0.18.2",
     "babel-eslint": "^7.1.1",
+    "babel-plugin-module-resolver": "^2.7.0",
     "babel-preset-es2015": "^6.18.0",
     "enzyme": "^2.6.0",
     "husky": "^0.13.1",
