add splash page for iOS

--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -43,6 +43,7 @@
     "react-native-linear-gradient": "^2.0.0",
     "react-native-maps": "^0.14.0",
     "react-native-router-flux": "^3.37.0",
+    "react-native-splash-screen": "^2.0.0",
     "react-native-svg": "^5.1.5",
     "react-native-vector-icons": "^4.0.0",
     "react-native-zss-rich-text-editor": "https://github.com/rwoody/react-native-zss-rich-text-editor",
