--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@rwoody/ht-util": "*",
+    "algoliasearch": "^3.22.1",
     "babel-register": "^6.23.0",
     "bcrypt": "^1.0.2",
     "consolidate": "^0.14.5",
