inserting pictures working

--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -46,8 +46,8 @@
     "react-native-splash-screen": "^2.0.0",
     "react-native-svg": "^5.1.5",
     "react-native-vector-icons": "^4.0.0",
-    "react-native-zss-rich-text-editor": "https://github.com/rwoody/react-native-zss-rich-text-editor",
-    "react-native-webview-bridge-updated": "https://github.com/rwoody/react-native-webview-bridge",
+    "react-native-webview-bridge-updated": "https://github.com/rwoody/react-native-webview-bridge#container-style",
+    "react-native-zss-rich-text-editor": "https://github.com/rwoody/react-native-zss-rich-text-editor#hide-title",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-form": "^6.5.0",
