--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@rwoody/ht-core": "~0.0.3",
+    "@rwoody/ht-util": "0.0.4",
     "aws-sdk": "^2.40.0",
     "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
