--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@rwoody/ht-util": "*",
     "algoliasearch": "^3.22.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.23.0",
     "bcrypt": "^1.0.2",
     "consolidate": "^0.14.5",
@@ -29,7 +30,9 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
+    "flow-bin": "^0.44.2",
     "rimraf": "^2.6.1"
   }
 }
