--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "ace-css": "^1.1.0",
     "express": "^4.15.2",
     "nunjucks": "^3.0.0"
   }
