--- a/packages/ht-seed-data/.env.example
+++ b/packages/ht-seed-data/.env.example
@@ -1,4 +1,12 @@
 MONGODB_URL="mongodb://localhost/ht-mono"
-
-# Don't send welcome emails, etc. when seeding
 DISABLE_EMAIL=true
+
+# AWS
+AWS_S3_BUCKET="hero-traveler"
+
+# Search provider
+DISABLE_ALGOLIA=true
+ALGOLIA_ACCT_KEY="my key"
+ALGOLIA_API_KEY="my key"
+ALGOLIA_USER_INDEX="ryan_dev_USERS"
+ALGOLIA_STORY_INDEX="ryan_dev_STORIES"
