--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -16,8 +16,10 @@
     "@rwoody/ht-core": "~0.0.3",
     "@rwoody/ht-util": "0.0.4",
     "body-parser": "^1.17.1",
+    "connect-flash": "^0.1.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "express-messages": "^1.0.1",
     "morgan": "^1.8.1",
     "nunjucks": "^3.0.0"
   }
