--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -22,6 +22,7 @@
     "express": "^4.15.2",
     "express-messages": "^1.0.1",
     "express-session": "^1.15.2",
+    "lodash": "^4.17.4",
     "morgan": "^1.8.1",
     "nunjucks": "^3.0.0"
   }
