--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@rwoody/ht-core": "~0.0.3",
     "@rwoody/ht-util": "0.0.4",
+    "aws-sdk": "^2.46.0",
     "body-parser": "^1.17.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
@@ -24,6 +25,9 @@
     "express-session": "^1.15.2",
     "lodash": "^4.17.4",
     "morgan": "^1.8.1",
-    "nunjucks": "^3.0.0"
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
+    "nunjucks": "^3.0.0",
+    "uuid": "^3.0.1"
   }
 }
