ignite add push-notification

--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -44,6 +44,7 @@
     "react-native-keyboard-spacer": "^0.3.1",
     "react-native-linear-gradient": "^2.0.0",
     "react-native-maps": "^0.14.0",
+    "react-native-push-notification": "^2.2.1",
     "react-native-router-flux": "https://github.com/rwoody/react-native-router-flux",
     "react-native-splash-screen": "^2.0.0",
     "react-native-svg": "^5.1.5",
@@ -69,6 +70,7 @@
     "husky": "^0.13.1",
     "ignite-animatable": "^0.3.1",
     "ignite-ir-boilerplate-2016": "^0.2.0",
+    "ignite-push-notification": "^0.0.2",
     "ignite-vector-icons": "^0.2.1",
     "mockery": "^2.0.0",
     "nyc": "^10.1.2",
