--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@rwoody/ht-core": "~0.0.3",
     "@rwoody/ht-util": "0.0.4",
+    "apn": "^2.1.4",
     "aws-sdk": "^2.40.0",
     "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
