--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -16,13 +16,17 @@
     "@rwoody/ht-core": "~0.0.3",
     "@rwoody/ht-util": "0.0.4",
     "aws-sdk": "^2.46.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-register": "^6.24.1",
     "body-parser": "^1.17.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "express-jwt": "^5.3.0",
     "express-messages": "^1.0.1",
     "express-session": "^1.15.2",
+    "jsonwebtoken": "^7.4.0",
     "lodash": "^4.17.4",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
