--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
     "multer-s3": "^2.5.0",
+    "node-cleanup": "^2.1.2",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
