--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -16,7 +16,9 @@
     "@rwoody/ht-core": "~0.0.3",
     "@rwoody/ht-util": "0.0.4",
     "aws-sdk": "^2.46.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
     "body-parser": "^1.17.1",
     "connect-flash": "^0.1.1",
@@ -24,7 +26,6 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-jwt": "^5.3.0",
-    "express-messages": "^1.0.1",
     "express-session": "^1.15.2",
     "jsonwebtoken": "^7.4.0",
     "lodash": "^4.17.4",
