--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "watch": "NODE_ENV='development' && nodemon ./src/index.js"
+    "watch": "NODE_ENV='development' && nodemon ./src/index.js",
+    "start": "node ./src/index.js"
   },
   "author": "",
   "license": "UNLICENSED",
@@ -25,7 +26,6 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
-    "express-jwt": "^5.3.0",
     "express-session": "^1.15.2",
     "jsonwebtoken": "^7.4.0",
     "lodash": "^4.17.4",
