--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build": "babel src -d dist"
+    "build": "babel src -d dist && copy src/utils/emailService/templates/* dist/utils/emailService/templates/"
   },
   "keywords": [],
   "author": "",
