--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@rwoody/ht-core",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "HERO Traveler core server functions",
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build": "babel src -d dist && copy src/utils/emailService/templates/* dist/utils/emailService/templates/"
+    "build": "babel src -d dist && mkdir dist/utils/emailService/templates && cp -a src/utils/emailService/templates/. dist/utils/emailService/templates"
   },
   "keywords": [],
   "author": "",
