--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -40,8 +40,9 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.4.0",
     "babel-register": "^6.23.0",
     "nodemon": "^1.11.0"
   }
