--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.4.0",
     "flow-bin": "^0.44.2",
     "rimraf": "^2.6.1"
   }
