--- a/packages/ht-seed-data/package.json
+++ b/packages/ht-seed-data/package.json
@@ -17,7 +17,7 @@
     "babel-cli": "^6.24.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.4.0",
     "babel-register": "^6.23.0",
     "dotenv": "^4.0.0",
     "faker": "^4.1.0",
