--- a/packages/ht-util/package.json
+++ b/packages/ht-util/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.4.0",
     "babel-register": "^6.23.0",
     "rimraf": "^2.6.1"
   }
