linking, reset password, verify email

--- a/packages/HeroTravelerMobile/ios/HeroTravelerMobile/Info.plist
+++ b/packages/HeroTravelerMobile/ios/HeroTravelerMobile/Info.plist
@@ -26,6 +26,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb1780202858957884</string>
+				<string>com.rehashstudio.herotraveler</string>
 			</array>
 		</dict>
 	</array>
