--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^4.8.6",
     "mongoose-delete": "^0.3.4",
     "mongoose-hidden": "^1.1.0",
+    "mongoose-slug-generator": "^1.0.4",
     "mongoose-unique-validator": "^1.0.5",
     "mustache": "^2.3.0",
     "nodemailer": "^3.1.8",
