--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^1.0.2",
     "consolidate": "^0.14.5",
     "joi": "^10.2.2",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "mongoose": "^4.8.6",
     "mongoose-delete": "^0.3.4",
