--- a/packages/ht-util/package.json
+++ b/packages/ht-util/package.json
@@ -16,5 +16,8 @@
     "babel-preset-env": "^1.4.0",
     "babel-register": "^6.23.0",
     "rimraf": "^2.6.1"
+  },
+  "dependencies": {
+    "request-promise": "^4.2.1"
   }
 }
