--- a/packages/HeroTravelerMobile/android/settings.gradle
+++ b/packages/HeroTravelerMobile/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'HeroTravelerMobile'
+include ':react-native-maps'
+project(':react-native-maps').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-maps/android')
 include ':react-native-webview-bridge-updated'
 project(':react-native-webview-bridge-updated').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-webview-bridge-updated/android')
 include ':react-native-hockeyapp'
