--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -43,6 +43,7 @@
     "react-native-hockeyapp": "^0.5.1",
     "react-native-htmlview": "^0.9.0",
     "react-native-image-picker": "^0.26.2",
+    "react-native-keyboard-aware-scrollview": "^1.1.6",
     "react-native-keyboard-spacer": "^0.3.1",
     "react-native-linear-gradient": "^2.0.0",
     "react-native-maps": "~0.13.0",
