--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.2",
     "normalizr": "^3.2.2",
     "numeral": "^2.0.6",
+    "prop-types": "^15.5.10",
     "querystringify": "0.0.4",
     "ramda": "^0.23.0",
     "react": "~15.4.1",
