--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -54,7 +54,7 @@
     "react-native-vector-icons": "^4.0.0",
     "react-native-video": "https://github.com/rwoody/react-native-video",
     "react-native-webview-bridge-updated": "https://github.com/rwoody/react-native-webview-bridge#container-style",
-    "react-native-zss-rich-text-editor": "https://github.com/rwoody/react-native-zss-rich-text-editor#hide-title",
+    "react-native-zss-rich-text-editor": "https://github.com/rwoody/react-native-zss-rich-text-editor#insert-video",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-form": "^6.5.0",
