--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "hero-travel-monorepo",
   "version": "0.0.1-beta",
   "devDependencies": {
-    "lerna": "2.0.0-beta.38"
+    "lerna": "^2.0.0-rc.5"
   },
   "scripts": {
-    "bootstrap": "lerna bootstrap"
+    "bootstrap": "lerna bootstrap",
+    "remove-modules": "lerna exec -- rm -rf ./node_modules"
   }
 }
