add missing deps, remove broken unused deps

--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -9,7 +9,7 @@
     "fixcode": "standard --fix",
     "clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean",
     "clean:android": "cd android/ && ./gradlew clean && cd .. && react-native run-android",
-    "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean && npm i",
+    "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean && yarn install",
     "test": "ava",
     "test:watch": "ava --watch",
     "coverage": "nyc ava && nyc report --reporter=html && open coverage/index.html || xdg-open coverage/index.html",
@@ -26,8 +26,10 @@
     "algoliasearch": "^3.22.1",
     "algoliasearch-helper": "^2.20.1",
     "apisauce": "^0.10.0",
+    "babel-preset-stage-0": "^6.24.1",
     "format-json": "^1.0.3",
     "lodash": "^4.17.2",
+    "moment": "^2.18.1",
     "normalizr": "^3.2.2",
     "numeral": "^2.0.6",
     "prop-types": "^15.5.10",
@@ -51,7 +53,6 @@
     "react-native-push-notification": "^2.2.1",
     "react-native-router-flux": "https://github.com/rwoody/react-native-router-flux",
     "react-native-splash-screen": "^2.0.0",
-    "react-native-svg": "^5.1.5",
     "react-native-vector-icons": "^4.0.0",
     "react-native-video": "https://github.com/rwoody/react-native-video",
     "react-native-webview-bridge-updated": "https://github.com/rwoody/react-native-webview-bridge#container-style",
