--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -44,6 +44,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "babel-register": "^6.23.0",
+    "dotenv": "^4.0.0",
     "nodemon": "^1.11.0"
   }
 }
