--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -35,7 +35,7 @@
     "prop-types": "^15.5.10",
     "querystringify": "0.0.4",
     "ramda": "^0.23.0",
-    "react": "~15.4.1",
+    "react": "^15.5.4",
     "react-native": "0.42.0",
     "react-native-animatable": "^1.1.0",
     "react-native-camera": "0.6",
