--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -42,10 +42,12 @@
     "react-native-device-info": "^0.10.0",
     "react-native-drawer": "^2.3.0",
     "react-native-fbsdk": "^0.5.0",
+    "react-native-fetch-blob": "^0.10.5",
     "react-native-global-props": "^1.1.1",
     "react-native-hockeyapp": "^0.5.1",
     "react-native-htmlview": "^0.9.0",
     "react-native-image-picker": "^0.26.2",
+    "react-native-img-cache": "^1.4.0",
     "react-native-keyboard-aware-scrollview": "^1.1.6",
     "react-native-keyboard-spacer": "^0.3.1",
     "react-native-linear-gradient": "^2.0.0",
