--- a/packages/express-api/Dockerfile
+++ b/packages/express-api/Dockerfile
@@ -1,13 +1,16 @@
 FROM rwoody/ht-api-base
 
+RUN curl -o- -L https://yarnpkg.com/install.sh | bash
+
 RUN mkdir /app
 WORKDIR /app
 
 ARG NPM_TOKEN
 
+COPY yarn.lock /app/yarn.lock
 COPY .npmrc /app/.npmrc
 COPY package.json /app/package.json
-RUN npm install --production
+RUN $HOME/.yarn/bin/yarn install
 RUN rm -f /app/.npmrc
 COPY index.js /app/index.js
 COPY dist/ /app/dist
