--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -16,8 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@rwoody/ht-core": "~0.0.3",
-    "@rwoody/ht-util": "~0.0.4",
+    "@rwoody/ht-core": "^0.0.23",
+    "@rwoody/ht-util": "^0.0.10",
     "apn": "^2.1.4",
     "aws-sdk": "^2.40.0",
     "babel-polyfill": "^6.23.0",
