--- a/packages/HeroTravelerMobile/.babelrc
+++ b/packages/HeroTravelerMobile/.babelrc
@@ -1,5 +1,10 @@
 {
-  "presets": ["react-native"],
+  "presets": [
+    "react-native"
+  ],
+  "plugins": [
+    "transform-class-properties"
+  ],
   "env": {
     "production": {
       "plugins": [
