--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "lint": "standard --verbose | snazzy",
+    "lint": "eslint --quiet App/**/*.js",
     "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
     "fixcode": "standard --fix",
     "clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean",
@@ -27,7 +27,9 @@
     "algoliasearch-helper": "^2.20.1",
     "apisauce": "^0.10.0",
     "babel-plugin-transform-remove-console": "^6.8.4",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-stage-0": "^6.24.1",
+    "eslint-plugin-react-native": "^2.3.2",
     "format-json": "^1.0.3",
     "lodash": "^4.17.2",
     "moment": "^2.18.1",
@@ -71,10 +73,13 @@
   },
   "devDependencies": {
     "ava": "^0.18.2",
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-module-resolver": "^2.7.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.18.0",
     "enzyme": "^2.6.0",
+    "eslint": "^4.0.0",
+    "eslint-plugin-react": "^7.1.0",
     "husky": "^0.13.1",
     "ignite-animatable": "^0.3.1",
     "ignite-ir-boilerplate-2016": "^0.2.0",
