--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -39,6 +39,7 @@
     "querystringify": "0.0.4",
     "ramda": "^0.23.0",
     "react": "^15.5.4",
+    "react-mixin": "^3.0.5",
     "react-native": "~0.42.0",
     "react-native-animatable": "^1.1.0",
     "react-native-camera": "0.6",
@@ -63,6 +64,7 @@
     "react-native-webview-bridge-updated": "https://github.com/rwoody/react-native-webview-bridge#container-style",
     "react-native-zss-rich-text-editor": "https://github.com/rwoody/react-native-zss-rich-text-editor#insert-video",
     "react-redux": "^5.0.2",
+    "react-timer-mixin": "^0.13.3",
     "recompose": "^0.23.5",
     "redux": "^3.6.0",
     "redux-form": "^6.5.0",
