--- a/packages/HeroTravelerMobile/android/app/build.gradle
+++ b/packages/HeroTravelerMobile/android/app/build.gradle
@@ -126,6 +126,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-version-number')
     compile project(':react-native-fetch-blob')
     compile project(':react-native-maps')
     compile project(':react-native-webview-bridge-updated')
