--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -44,6 +44,7 @@
     "react-native-animatable": "^1.1.0",
     "react-native-camera": "0.6",
     "react-native-device-info": "^0.10.0",
+    "react-native-draftjs-render": "^1.0.3",
     "react-native-drawer": "^2.3.0",
     "react-native-fbsdk": "^0.5.0",
     "react-native-fetch-blob": "^0.10.5",
