--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start:ios": "concurrently -r 'npm run share:watch' 'react-native run-ios'",
     "lint": "eslint --quiet App/**/*.js",
     "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
     "fixcode": "standard --fix",
@@ -21,7 +22,8 @@
     "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
     "dev-test-link-reset": "xcrun simctl openurl booted \"com.rehashstudio.herotraveler://resetpassword/a6671bb4-73df-4110-8a7b-c1f1dd579707\"",
     "dev-test-link-email": "xcrun simctl openurl booted \"com.rehashstudio.herotraveler://emailverify/dc24a446-3a76-477a-8f17-255dfbaf0892\"",
-    "share": "rimraf App/Shared && mkdir App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png}\" App/Shared"
+    "share": "rimraf App/Shared && mkdir App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png}\" App/Shared",
+    "share:watch": "rimraf App/Shared && mkdir App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png}\" App/Shared --watch"
   },
   "dependencies": {
     "algoliasearch": "^3.22.1",
@@ -82,6 +84,7 @@
     "babel-plugin-module-resolver": "^2.7.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.18.0",
+    "concurrently": "^3.5.0",
     "cpx": "^1.5.0",
     "enzyme": "^2.6.0",
     "eslint": "^4.0.0",
