add new editor files

--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -29,8 +29,10 @@
     "babel-plugin-transform-remove-console": "^6.8.4",
     "babel-preset-env": "^1.5.2",
     "babel-preset-stage-0": "^6.24.1",
+    "draft-js": "0.10.1",
     "eslint-plugin-react-native": "^2.3.2",
     "format-json": "^1.0.3",
+    "immutable": "3.7.6",
     "lodash": "^4.17.2",
     "moment": "^2.18.1",
     "normalizr": "^3.2.2",
