--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.10"
+    "react-router-dom": "^4.1.1",
+    "react-scripts": "1.0.10",
+    "styled-components": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -13,7 +16,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "share": "rimraf src/App/shared && mkdir src/App/shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png}\" src/App/shared",
-    "share:watch": "rimraf src/App/shared && mkdir src/App/shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png}\" src/App/shared --watch"
+    "share:watch": "rimraf src/App/Shared && mkdir src/App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png}\" src/App/Shared --watch"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
