--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.18.1",
+    "numeral": "^2.0.6",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-flexbox-grid": "^1.1.3",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10",
     "styled-components": "^2.1.1"
