--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,6 +9,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-flexbox-grid": "^1.1.3",
+    "react-google-maps": "next",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10",
     "styled-components": "^2.1.1"
