--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,6 +12,7 @@
     "react-google-maps": "next",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10",
+    "redraft": "^0.8.0",
     "styled-components": "^2.1.1"
   },
   "scripts": {
