--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
+    "cloudinary": "^1.9.0",
     "compose-middleware": "^2.2.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
@@ -33,6 +34,7 @@
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
     "multer-s3": "^2.5.0",
+    "multer-storage-cloudinary": "^2.2.1",
     "node-cleanup": "^2.1.2",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
