--- a/packages/express-api/Dockerfile
+++ b/packages/express-api/Dockerfile
@@ -1,20 +1,14 @@
 FROM rwoody/ht-api-base
-
-RUN curl -o- -L https://yarnpkg.com/install.sh | bash
-
+ARG NPM_TOKEN
 RUN mkdir /app
 WORKDIR /app
 
-ARG NPM_TOKEN
+RUN curl -o- -L https://yarnpkg.com/install.sh | bash
 
-COPY yarn.lock /app/yarn.lock
-COPY .npmrc /app/.npmrc
-COPY package.json /app/package.json
+COPY . /app
 RUN $HOME/.yarn/bin/yarn install
 RUN rm -f /app/.npmrc
-COPY index.js /app/index.js
-COPY dist/ /app/dist
-COPY certificates/ /app/certificates
+RUN npm run build
 
 EXPOSE 3000
 CMD npm start
