--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,10 @@ version: "3"
 services:
   api:
     image: rehashstudio2017/ht-api
+    build:
+      context: packages/express-api
+      args:
+        NPM_TOKEN: ${NPM_TOKEN}
     ports:
       - 80:3000
     env_file: .env
