--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dateformat": "^2.0.0",
     "moment": "^2.18.1",
+    "moment-random": "^1.0.2",
     "numeral": "^2.0.6",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
