--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,8 @@ services:
     build:
       context: packages/express-api
       args:
-        NPM_TOKEN: ${NPM_TOKEN}
+        NPM_USERNAME: ${NPM_USERNAME}
+        NPM_PASSWORD: ${NPM_PASSWORD}
     ports:
       - 80:3000
     env_file: .env
