--- a/packages/ht-seed-data/package.json
+++ b/packages/ht-seed-data/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@rwoody/ht-seed-data",
+  "name": "@hero/ht-seed-data",
   "version": "0.0.1",
-  "private": true,
   "description": "Common server/client javascript functions",
+  "private": true,
   "main": "index.js",
   "keywords": [],
   "author": "Rehash Studio",
@@ -13,7 +13,7 @@
     "postinstall": "mkdir -p dist/category_images dist/story_images"
   },
   "devDependencies": {
-    "@rwoody/ht-core": "*",
+    "@hero/ht-core": "*",
     "babel-cli": "^6.24.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
