--- a/packages/ht-util/package.json
+++ b/packages/ht-util/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rwoody/ht-util",
-  "version": "0.0.10",
+  "name": "@hero/ht-util",
+  "version": "0.0.11",
   "description": "Common server/client javascript functions",
   "main": "index.js",
   "keywords": [],
