Use token instead of basic auth

--- a/packages/express-api/.npmrc
+++ b/packages/express-api/.npmrc
@@ -1,5 +1,5 @@
 registry = "https://npm.abeck.io"
 ca = null
 always-auth = true
-//npm.abeck.io:_authToken=${NPM_USERNAME}:${NPM_PASSWORD}
+//npm.abeck.io:_authToken=${NPM_TOKEN}
 
