--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,7 @@ services:
     build:
       context: packages/express-api
       args:
-        NPM_USERNAME: ${NPM_USERNAME}
-        NPM_PASSWORD: ${NPM_PASSWORD}
+        NPM_TOKEN: ${NPM_TOKEN}
     ports:
       - 80:3000
     env_file: .env
