--- a/packages/express-api/.npmrc
+++ b/packages/express-api/.npmrc
@@ -1,5 +1,4 @@
 registry = "https://npm.abeck.io"
-ca = null
 always-auth = true
-//npm.abeck.io:_authToken=${NPM_TOKEN}
+//npm.abeck.io/:_authToken="${NPM_TOKEN}"
 
