frame out settings notifications modal

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^15.6.1",
     "react-flexbox-grid": "^1.1.3",
     "react-google-maps": "next",
+    "react-ios-switch": "^0.1.10",
     "react-modal": "^2.2.2",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10",
