--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,6 +11,7 @@
     "react-flexbox-grid": "^1.1.3",
     "react-google-maps": "next",
     "react-modal": "^2.2.2",
+    "react-places-autocomplete": "^5.4.2",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10",
     "redraft": "^0.8.0",
