--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -57,6 +57,7 @@
     "react-native-image-picker": "^0.26.2",
     "react-native-img-cache": "^1.4.0",
     "react-native-keyboard-spacer": "^0.3.1",
+    "react-native-keyboard-tracking-view": "^3.0.13",
     "react-native-linear-gradient": "^2.0.0",
     "react-native-maps": "~0.13.0",
     "react-native-push-notification": "^2.2.1",
