--- a/packages/HeroTravelerMobile/ios/HeroTravelerMobile/Info.plist
+++ b/packages/HeroTravelerMobile/ios/HeroTravelerMobile/Info.plist
@@ -26,7 +26,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb1780202858957884</string>
-				<stringcom.herotraveler.herotraveler-beta</string>
+				<string>com.herotraveler.herotraveler-beta</string>
 			</array>
 		</dict>
 	</array>
