added category indexing patch

--- a/packages/ht-seed-data/.env.example
+++ b/packages/ht-seed-data/.env.example
@@ -1,12 +1,27 @@
-MONGODB_URL="mongodb://localhost/ht-mono"
-DISABLE_EMAIL=true
+NODE_ENV='development' // development or production
+MONGODB_URL="mongodb://{adminUsername}:{password}@{instance}.mlab.com:{port}/{db}"
 
-# AWS
-AWS_S3_BUCKET="hero-traveler"
+AWS_ACCESS_KEY="{enterAccessKey}"
+AWS_SECRET_KEY="{enterSecretKey}"
+AWS_ASSETS_FOLDER="{AWS_FOLDER}"
+AWS_S3_BUCKET="{AWS_BUCKET}"
 
-# Search provider
-DISABLE_ALGOLIA=true
-ALGOLIA_ACCT_KEY="my key"
-ALGOLIA_API_KEY="my key"
-ALGOLIA_USER_INDEX="ryan_dev_USERS"
-ALGOLIA_STORY_INDEX="ryan_dev_STORIES"
+CLOUDINARY_NAME="{cloudName}"
+CLOUDINARY_KEY="{key}"
+CLOUDINARY_SECRET="{secret}"
+ASSETS_AVATARS_FOLDER={folderName}
+ASSETS_COVERS_FOLDER={folderName}
+ASSETS_IMAGES_FOLDER={folderName}
+ASSETS_VIDEOS_FOLDER={folderName}
+
+SENDGRID_API_KEY="{sendgridKey}"
+SENDGRID_FROM_ADDRESS="{dev's email or production email}"
+
+ALGOLIA_ACCT_KEY='{acctKey}'
+ALGOLIA_API_KEY='{apiKey}'
+ALGOLIA_USER_INDEX='{userIndex}'
+ALGOLIA_STORY_INDEX='{storyIndex}'
+ALGOLIA_CATEGORY_INDEX='{categoryIndex}'
+
+GOOGLE_API_KEY='{googleApiKey}'
+API_HOST="{ht url or ngrok url for testing}"
