redux runs on web without errors

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,16 +20,16 @@
     "react-ios-switch": "^0.1.12",
     "react-modal": "^2.2.2",
     "react-places-autocomplete": "^5.4.3",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10",
     "redraft": "^0.8.0",
-    "redux": "^3.7.2",
-    "redux-form": "^7.1.1",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^4.10.1",
-    "redux-saga": "^0.16.0",
-    "reduxsauce": "^0.7.0",
+    "redux": "^3.6.0",
+    "redux-form": "^6.5.0",
+    "redux-logger": "^2.8.2",
+    "redux-persist": "^4.1.0",
+    "redux-saga": "^0.14.3",
+    "reduxsauce": "^0.4.1",
     "seamless-immutable": "^7.1.2",
     "styled-components": "^2.1.1"
   },
@@ -45,6 +45,7 @@
     "concurrently": "^3.5.0",
     "cpx": "^1.5.0",
     "reactotron-apisauce": "^1.12.2",
+    "reactotron-react-js": "^1.12.2",
     "reactotron-redux": "^1.12.2",
     "reactotron-redux-saga": "^1.12.2",
     "rimraf": "^2.6.1"
