Initial pass at Video with Controls Element

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "remove-modules": "lerna exec -- rm -rf ./node_modules",
     "build": "docker-compose build",
     "deploy": "docker stack deploy --with-registry-auth --compose-file=docker-compose.yaml api"
+  },
+  "dependencies": {
+    "react-html5video": "^2.5.1"
   }
 }
