POC add a new category

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "algoliasearch": "^3.24.8",
     "apisauce": "^0.14.1",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
