--- a/packages/cms/Dockerfile
+++ b/packages/cms/Dockerfile
@@ -1,15 +1,18 @@
-FROM rwoody/ht-api-base
-
+FROM rehashstudio2017/ht-api-base
+ARG NPM_TOKEN
 RUN mkdir /app
 WORKDIR /app
 
-ARG NPM_TOKEN
+RUN curl -o- -L https://yarnpkg.com/install.sh | bash
 
 COPY .npmrc /app/.npmrc
 COPY package.json /app/package.json
-RUN npm install --production
+COPY yarn.lock /app/yarn.lock
+RUN $HOME/.yarn/bin/yarn install
 RUN rm -f /app/.npmrc
-COPY dist/ /app/dist
+COPY src/ /app/src
+RUN npm run build
+RUN rm -rf /app/src
 
 EXPOSE 3000
 CMD npm start
