--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.5",
   "description": "Content Management System for the Herotraveller App",  "main": "index.js",
   "scripts": {
-    "build": "babel src -d dist",
+    "build": "node_modules/.bin/babel src -d dist",
     "clean": "rimraf dist",
     "start": "node dist/index.js",
     "dev": "nodemon index.js",
