docker build fix

--- a/packages/express-api/Dockerfile
+++ b/packages/express-api/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 RUN curl -o- -L https://yarnpkg.com/install.sh | bash
 
 COPY . /app
+RUN rm -f /app/.env
 RUN $HOME/.yarn/bin/yarn install
 RUN rm -f /app/.npmrc
 RUN npm run build
