added video length upload check

--- a/packages/HeroTravelerMobile/android/app/build.gradle
+++ b/packages/HeroTravelerMobile/android/app/build.gradle
@@ -126,6 +126,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-media-meta')
     compile project(':react-native-google-places')
     compile project(':react-native-version-number')
     compile project(':react-native-fetch-blob')
