--- a/packages/HeroTravelerMobile/android/settings.gradle
+++ b/packages/HeroTravelerMobile/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'HeroTravelerMobile'
+include ':react-native-media-meta'
+project(':react-native-media-meta').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-media-meta/android')
 include ':react-native-google-places'
 project(':react-native-google-places').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-google-places/android')
 include ':react-native-version-number'
