--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -5,11 +5,12 @@
   "main": "dist/index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build": "babel src -d dist && mkdir dist/utils/emailService/templates && cp -a src/utils/emailService/templates/. dist/utils/emailService/templates",
+    "build": "babel src -d dist && rimraf dist/utils/emailService/templates && mkdir dist/utils/emailService/templates && cp -a src/utils/emailService/templates/. dist/utils/emailService/templates",
     "publish:abeck": "yarn install && npm run clean && npm run build && npm publish --registry https://npm.abeck.io",
     "publish:local": "npm run clean && npm run build && npm run copy-local:api && npm run copy-local:seeder",
     "copy-local:api": "cp -r ./{dist,package.json} ../express-api/node_modules/@hero/ht-core",
-    "copy-local:seeder": "cp -r ./{dist,package.json} ../ht-seed-data/node_modules/@hero/ht-core"
+    "copy-local:seeder": "cp -r ./{dist,package.json} ../ht-seed-data/node_modules/@hero/ht-core",
+    "dev": "watch 'npm run build && npm run copy-local:api' src"
   },
   "keywords": [],
   "author": "",
@@ -40,6 +41,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "flow-bin": "^0.44.2",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "watch": "^1.0.2"
   }
 }
