--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -10,7 +10,9 @@
     "publish:local": "npm run clean && npm run build && npm run copy-local:api && npm run copy-local:seeder",
     "copy-local:api": "cp -r ./{dist,package.json} ../express-api/node_modules/@hero/ht-core",
     "copy-local:seeder": "cp -r ./{dist,package.json} ../ht-seed-data/node_modules/@hero/ht-core",
-    "dev": "watch 'npm run build && npm run copy-local:api' src"
+    "copy-local:cms": "cp -r ./{dist,package.json} ../cms/node_modules/@hero/ht-core",
+    "dev": "watch 'npm run build && npm run copy-local:api' src",
+    "dev:cms": "watch 'npm run build && npm run copy-local:cms' src"
   },
   "keywords": [],
   "author": "",
