can build app with branch integration

--- a/packages/HeroTravelerMobile/android/app/build.gradle
+++ b/packages/HeroTravelerMobile/android/app/build.gradle
@@ -126,6 +126,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-branch')
     compile project(':react-native-autogrow-textinput')
     compile project(':@hero/react-native-autogrow-textinput')
     compile project(':react-native-google-places')
