--- a/packages/HeroTravelerMobile/ios/HeroTravelerMobile/HeroTravelerMobile.entitlements
+++ b/packages/HeroTravelerMobile/ios/HeroTravelerMobile/HeroTravelerMobile.entitlements
@@ -4,5 +4,10 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>s4cz.app.link</string>
+		<string>s4cz-alternate.app.link</string>
+	</array>
 </dict>
 </plist>
