Fix Containers/Header.js style with prettier-eslint

--- a/packages/web/.eslintrc
+++ b/packages/web/.eslintrc
@@ -23,6 +23,7 @@
     "react/jsx-no-bind": 2,
     "react/prop-types": 1,
     "react/no-string-refs": 1,
+    "brace-style": ["error", "stroustrup"],
     "comma-dangle": ["error", {
       "arrays": "always-multiline",
       "objects": "always-multiline",
